ansible/roles/deployment_front/files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: hackathon2025/skillstasks_repo-front:latest  
          ports:
            - containerPort: 3000
